[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://animations/close_window.tres" type="Animation" id=2]
[ext_resource path="res://animations/open_window.tres" type="Animation" id=3]
[ext_resource path="res://images/popup.png" type="Texture" id=4]
[ext_resource path="res://images/window_header.png" type="Texture" id=5]
[ext_resource path="res://fonts/window_title.font" type="BitmapFont" id=6]
[ext_resource path="res://fonts/polypty.font" type="BitmapFont" id=7]
[ext_resource path="res://images/switch_on.png" type="Texture" id=8]
[ext_resource path="res://images/switch_off.png" type="Texture" id=9]
[ext_resource path="res://images/reset_progress_button.png" type="Texture" id=10]
[ext_resource path="res://images/reset_progress_button_pressed.png" type="Texture" id=11]
[ext_resource path="res://images/exit_button.png" type="Texture" id=12]
[ext_resource path="res://images/exit_button_pressed.png" type="Texture" id=13]
[ext_resource path="res://images/close_window.png" type="Texture" id=14]
[ext_resource path="res://images/close_window_pressed.png" type="Texture" id=15]

[node name="settings" type="Node2D"]

pause_mode = 2
z_index = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Z Index" ]

[node name="animation" type="AnimationPlayer" parent="." index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/close = ExtResource( 2 )
anims/open = ExtResource( 3 )
blend_times = [  ]

[node name="clickable_space" type="Button" parent="." index="1"]

modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -540.0
margin_top = -2400.0
margin_right = 540.0
margin_bottom = 2400.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
flat = false
align = 1

[node name="window" type="Node2D" parent="." index="2"]

modulate = Color( 1, 1, 1, 0 )
scale = Vector2( 1e-05, 1e-05 )

[node name="non_clickable_space" type="Control" parent="window" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -500.0
margin_top = -680.0
margin_right = 500.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="background" type="Sprite" parent="window" index="1"]

position = Vector2( 0, 8.84648 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="header" type="Sprite" parent="window" index="2"]

position = Vector2( 0, -540 )
texture = ExtResource( 5 )

[node name="title" type="Label" parent="window/header" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -201.0
margin_top = -34.0
margin_right = 272.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
text = "SETTINGS"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="music_control" type="Control" parent="window" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -275.0
margin_bottom = -275.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="label" type="Label" parent="window/music_control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -403.0
margin_top = -56.0
margin_right = -16.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "MUSIC:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="switch" type="TextureButton" parent="window/music_control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -5.0
margin_top = -88.0
margin_right = 425.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="sound_control" type="Control" parent="window" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -68.0
margin_bottom = -68.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="label" type="Label" parent="window/sound_control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -403.0
margin_top = -56.0
margin_right = -16.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 7 )
text = "SOUND:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="switch" type="TextureButton" parent="window/sound_control" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -5.0
margin_top = -85.0
margin_right = 425.0
margin_bottom = 92.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="reset_progress" type="TextureButton" parent="window" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -375.0
margin_top = 65.0
margin_right = 375.0
margin_bottom = 289.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 11 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="exit_button" type="TextureButton" parent="window" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -295.0
margin_top = 257.0
margin_right = 282.0
margin_bottom = 429.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )

[node name="close_button" type="TextureButton" parent="window" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 363.0
margin_top = -554.0
margin_right = 527.0
margin_bottom = -329.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 15 )

[connection signal="animation_finished" from="animation" to="." method="_on_animation_finished"]

[connection signal="pressed" from="clickable_space" to="." method="_on_clickable_space_pressed"]

[connection signal="toggled" from="window/music_control/switch" to="." method="_on_switch_music_toggled"]

[connection signal="toggled" from="window/sound_control/switch" to="." method="_on_switch_sound_toggled"]

[connection signal="pressed" from="window/reset_progress" to="." method="_on_reset_progress_pressed"]

[connection signal="pressed" from="window/exit_button" to="." method="_on_exit_button_pressed"]

[connection signal="pressed" from="window/close_button" to="." method="_on_close_button_pressed"]


